[package]
name = "biscotti"
version = "0.3.1"
edition = "2021"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LukeMathWalker/biscotti"
readme = "README.md"
description = """
HTTP cookie management for Rust servers.
"""
categories = ["web-programming::http-server"]
keywords = ["cookies", "http", "web", "cookie"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }
percent-encoding = "2.0"
subtle = "2.5.0"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
aes-gcm-siv = "0.11.1"
base64 = "0.22.0"
hmac = "0.12.1"
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"], optional = true }
log = "0.4.21"

[dev-dependencies]
googletest = "0.11.0"
