[package]
name = "biscotti"
version = "0.4.0"
edition = "2024"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LukeMathWalker/biscotti"
readme = "README.md"
description = """
HTTP cookie management for Rust servers.
"""
categories = ["web-programming::http-server"]
keywords = ["cookies", "http", "web", "cookie"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
jiff = "0.2.4"
percent-encoding = "2.3"
subtle = "2.6.1"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
hmac = "0.12.1"
anyhow = "1"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
googletest = "0.11.0"
